--- a/src/pug/alpakka/components.pug
+++ b/src/pug/alpakka/components.pug
@@ -4,7 +4,8 @@ block title
   | Alpakka components
 
 block page
-  include _title.pug
+  include ../_device_selector.pug
+  include ../_disclaimer_v1.pug
 
   div.boxes.grid
 
