--- a/src/pug/alpakka/manual/_manual.pug
+++ b/src/pug/alpakka/manual/_manual.pug
@@ -6,7 +6,8 @@ block title
     |
 
 block page
-  include ../_title.pug
+  include ../../_device_selector.pug
+  include ../../_disclaimer_v1.pug
 
   mixin home
     img(src='/static/manual/button_home.svg' height='14px')
