--- a/src/pug/blog/_blog.pug
+++ b/src/pug/blog/_blog.pug
@@ -25,6 +25,7 @@ block page
 
         h3 News
         div
+          +wikilink('alpakka_v1') Alpakka 1.0 announcement
           +wikilink('report_26') Progress report 26
           +wikilink('report_25') Progress report 25
           +wikilink('report_24') Progress report 24
@@ -42,13 +43,12 @@ block page
           +wikilink('gyro_ratcheting') Gyro ratcheting and flick stick
           +wikilink('dual_gyro') Dual gyro
           +wikilink('finger_sensing') Finger sensing
-          div.inactive Addressable controllers #[i (Soon)]
 
         h3 Other
         div
           +wikilink('talking_about_us') They were talking about us
           +wikilink('hardware_review') Get hardware for review
-          +wikilink('next') Propose blog entries
+          //- +wikilink('next') Propose blog entries
           +wikilink(org.roadmap, true) Roadmap
 
     div.box.entry
