--- a/src/pug/blog/report_26.pug
+++ b/src/pug/blog/report_26.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #26
-  +news_header('13 November 2024', 'report_25', '')
+  +news_header('13 November 2024', 'report_25', 'alpakka_v1')
 
   h3 ESP-based wireless prototypes
   p We created RF prototypes iterations #[em 8] and #[em 9], moving from a chip antenna to a pre-certified #[+ax('https://www.espressif.com/en/products/socs?id=ESP32-C2') Espressif ESP-8684-MINI-1] for communication, but still using the RP2040 as main MCU.
