Year 2 recap, Bulleted H4

--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -33,7 +33,7 @@
     contribute:    '/contribute/open_source',
     devices:       '/alpakka',
     alpakkaManual: '/alpakka/manual/mouse',
-    blog:          '/blog/alpakka_v1',
+    blog:          '/blog/recap_year_2',
   }
 
   const loadMathJax = [
