--- a/src/pug/alpakka/manual/mouse.pug
+++ b/src/pug/alpakka/manual/mouse.pug
@@ -50,7 +50,7 @@ block content
         p 45º of horizontal controller rotation (in real life) moves the cursor all the way from the left edge to right edge of the screen.
         hr
       td
-        b Recommended sensitivity
+        h4 Recommended sensitivity
         p 45º of horizontal controller rotation (in real life) should rotate the camera 180º (in-game)
         hr
     tr
