--- a/src/pug/blog/_blog.pug
+++ b/src/pug/blog/_blog.pug
@@ -25,6 +25,7 @@ block page
 
         h3 News
         div
+          +wikilink('recap_year_2') Year 2 recap
           +wikilink('alpakka_v1') Alpakka 1.0 announcement
           +wikilink('report_26') Progress report 26
           +wikilink('report_25') Progress report 25
@@ -32,7 +33,7 @@ block page
           //- Keep only last 3 reports.
           +wikilink('reports_all') Old progress reports
           +wikilink('patents') Patents, a necessary evil
-          +wikilink('recap_year_1') Year one recap
+          +wikilink('recap_year_1') Year 1 recap
           +wikilink('half_anniversary') Half anniversary
           +wikilink('shop_opening') Shop opening
           +wikilink('live') We are live
