--- a/src/static/style.css
+++ b/src/static/style.css
@@ -454,6 +454,10 @@ main .boxes.center {
 .wiki .entry h4 {
   font-size: 18px;
   margin-bottom: 0;
+
+}
+.wiki .entry h4.bullet::before {
+  content: "▸ ";
 }
 .wiki .entry h5 {
   font-size: 16px;
