--- a/src/static/style.css
+++ b/src/static/style.css
@@ -456,9 +456,9 @@ main .boxes.center {
   margin-bottom: 0;
 
 }
-.wiki .entry h4.bullet::before {
-  content: "▸ ";
-}
+/* .wiki .entry h4.bullet::before {
+  content: "• ";
+} */
 .wiki .entry h5 {
   font-size: 16px;
   margin-bottom: 0;
