--- a/src/pug/blog/recap_year_2.pug
+++ b/src/pug/blog/recap_year_2.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Year two recap
-  +news_header('30 December 2024', 'alpakka_v1', '')
+  +news_header('30 December 2024', 'alpakka_v1', 'report_27')
 
   p Input Labs went live in late November 2022, since this date is just a few weeks from the end of the year, this time we are making a double report #[em Input Labs year 2 recap] and #[em Year 2024 recap].
 
