--- a/src/pug/blog/reports_all.pug
+++ b/src/pug/blog/reports_all.pug
@@ -8,6 +8,7 @@ block content
   hr
 
   ul
+    li: +a('report_27') Progress report 27
     li: +a('report_26') Progress report 26
     li: +a('report_25') Progress report 25
     li: +a('report_24') Progress report 24
