--- a/src/pug/_template.pug
+++ b/src/pug/_template.pug
@@ -75,8 +75,14 @@ html
         +nav
 
       div.mininav
-        +a('/nav')
-          img(src='/static/img/burger.svg')
+        img(src='/static/img/burger.svg')
+        select(onchange="selectRedirect(event)")
+          option(value='/') Input Labs
+          option(value='/alpakka') Devices
+          option(value=redirect.contribute) Contribute
+          option(value=redirect.db) Accessibility DB
+          option(value=redirect.blog) Blog
+          option(value=org.shop) Shop
 
     main
       block page
