--- a/src/pug/_template.pug
+++ b/src/pug/_template.pug
@@ -77,6 +77,7 @@ html
       div.mininav
         img(src='/static/img/burger.svg')
         select(onchange="selectRedirect(event)")
+          option(value='') SELECT A PAGE
           option(value='/') Input Labs
           option(value='/alpakka') Devices
           option(value=redirect.contribute) Contribute
