Force JS file refresh

--- a/src/pug/_template.pug
+++ b/src/pug/_template.pug
@@ -33,7 +33,7 @@ html
       media="(prefers-color-scheme: dark)"
     )
     //- Scripts.
-    script(type='text/javascript' src='/static/init.js' defer)
+    script(type='text/javascript' src='/static/init.js?v=3' defer)
     script(
       defer
       data-domain=(ENV=='prod' ? 'inputlabs.io' : 'dev.inputlabs.io')
